[package]
name = "funlib-macros"
description = "Rust functional library macros"
version = "0.1.8"
edition = "2021"
authors = ["lemonxah <lemon.xah@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/lemonxah/funlib/macros"
documentation = "https://docs.rs/funlib/0.1.8/funlib-macros/"
repository = "https://github.com/lemonxah/funlib/macros"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
